# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
hooks/: clean_notebook_hook.py
